test-cases/negative/test_003_try_without_catch.lay
# negative test: try without catch block
# expected: should handle or warn

try
  throw 'error'
end try


